--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch --verbose false",
+    "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
