--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "postcss-nesting": "^13.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.0.3",
-    "@tailwindcss/postcss7-compat": "^2.1.0",
     "@vue/test-utils": "^1.1.3",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
@@ -32,8 +32,8 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vue-jest": "^3.0.4"
   }
 }
